Added is(), cmp_ok() and extended others for better compatibility with perl API

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,11 @@
 lib_LTLIBRARIES = libtap.la
-libtap_la_SOURCES = tap.c tap.h
+libtap_la_SOURCES = \
+	tap.c            tap.h          \
+	tap_main.c       tap_main.h     \
+	tap_params.c     tap_params.h   \
+       	tap_skip_todo.c  tap_skip_todo.h
 
 man_MANS = tap.3
 EXTRA_DIST = $(man_MANS)
 
-include_HEADERS = tap.h
+include_HEADERS = tap.h 
